--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
     "ol": "6.7.0",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.1.0",
